Add clean layout DCHECK to mostBackwardCaretPosition()

This patch adds clean layout |DCHECK()| to |mostBackwardCaretPosition()|, and
fixes call sites calling it with dirty layout tree, to make sure we don't call
it with dirty layout tree.

We could not have this |DCHECK()| since we call |mostBackwardCaretPosition()|
during node removal, but patch[1] made not to do so.

This patch is similar to patch[1], which is for |mostForwardCaretPosition()|.

This patch also makes |VisibleSelection::toNormalizedEphemeralRange()| to
use |needsLayoutTreeUpdate()| since |Document::needsLayoutTreeUpdate()| returns
false for "editing/inserting/insert_html_as_plain_text.html".

[1] http://crrev.com/2680943004 Make FrameSelection to hold non-canonicalized positions
[2] http://crrev.com/2706163002 Add clean layout DCHECK to mostForwardCaretPosition()

BUG=694413
TEST=n/a; no behavior changes

Review-Url: https://codereview.chromium.org/2705113003
Cr-Commit-Position: refs/heads/master@{#451869}

Former-commit-id: 52407bff3797a14717d3bd8fcd5c0e3a56489640